// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        content
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content"
          style="border: 1px solid red; padding: 10px;"
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.accordion: true - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
  role="tablist"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
      role="tabpanel"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.activeKey: content_two - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_two"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.bordered: false - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.defaultActiveKey: content_two - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_two"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.destroyInactivePanel: true - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.expandIcon: AiOutlineArrowRight - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.expandIcon: AiOutlineArrowRight_expandIcon","title":"AiOutlineArrowRight","className":"ant-collapse-arrow","rotate":90,"required":false}
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.expandIcon: AiOutlineArrowRight_expandIcon","title":"AiOutlineArrowRight","className":"ant-collapse-arrow","rotate":0,"required":false}
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.expandIconPosition: right - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-right"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.forceRender: true - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-inactive"
      style="display: none;"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_two"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels.disabled - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active ant-collapse-item-disabled"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="-1"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-disabled"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="-1"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels.extraKey - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
  role="tablist"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
      <div
        class="ant-collapse-extra"
      >
        <div
          data-testid="area-content_one_extra"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one_extra
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
      role="tabpanel"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
      <div
        class="ant-collapse-extra"
      >
        <div
          data-testid="area-content_two_extra"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two_extra
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels.title - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render properties.showArrow: false - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active ant-collapse-no-arrow"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-no-arrow"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        content
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content"
          style="border: 1px solid red; padding: 10px;"
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.accordion: true - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
  role="tablist"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
      role="tabpanel"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.activeKey: content_two - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_two"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.bordered: false - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.defaultActiveKey: content_two - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_two"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.destroyInactivePanel: true - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.expandIcon: AiOutlineArrowRight - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.expandIcon: AiOutlineArrowRight_expandIcon","title":"AiOutlineArrowRight","className":"ant-collapse-arrow","rotate":90,"required":false}
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          class="anticon"
          role="img"
        >
          <svg
            data-testid="AiOutlineExclamationCircle"
          >
            {"id":"properties.expandIcon: AiOutlineArrowRight_expandIcon","title":"AiOutlineArrowRight","className":"ant-collapse-arrow","rotate":0,"required":false}
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.expandIconPosition: right - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-right"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.forceRender: true - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-inactive"
      style="display: none;"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_two"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.panels - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.panels.disabled - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active ant-collapse-item-disabled"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="-1"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-disabled"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="-1"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.panels.extraKey - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
  role="tablist"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
      <div
        class="ant-collapse-extra"
      >
        <div
          data-testid="area-content_one_extra"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one_extra
        </div>
      </div>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
      role="tabpanel"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
      <div
        class="ant-collapse-extra"
      >
        <div
          data-testid="area-content_two_extra"
          style="border: 1px solid red; padding: 10px;"
        >
          content_two_extra
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.panels.title - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.showArrow: false - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active ant-collapse-no-arrow"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="emotion-0"
      >
        Title One
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <div
          data-testid="area-content_one"
          style="border: 1px solid red; padding: 10px;"
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-no-arrow"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="emotion-0"
      >
        Title Two
      </span>
    </div>
  </div>
</div>
`;

exports[`Render required = true with html in panel title - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        <div
          style="color:blue"
        >
          Panel 1 Title
        </div>
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      />
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        <div
          style="color:green"
        >
          Panel 2 Title
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Render with html in panel title - value[0] 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="transform: rotate(90deg);"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        <div
          style="color:blue"
        >
          Panel 1 Title
        </div>
      </span>
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      />
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <div>
        <span
          aria-label="right"
          class="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        class="emotion-0"
      >
        <div
          style="color:green"
        >
          Panel 2 Title
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.accordion: true 1`] = `true`;

exports[`Test Schema properties.accordion: true 2`] = `null`;

exports[`Test Schema properties.activeKey: content_two 1`] = `true`;

exports[`Test Schema properties.activeKey: content_two 2`] = `null`;

exports[`Test Schema properties.bordered: false 1`] = `true`;

exports[`Test Schema properties.bordered: false 2`] = `null`;

exports[`Test Schema properties.defaultActiveKey: content_two 1`] = `true`;

exports[`Test Schema properties.defaultActiveKey: content_two 2`] = `null`;

exports[`Test Schema properties.destroyInactivePanel: true 1`] = `true`;

exports[`Test Schema properties.destroyInactivePanel: true 2`] = `null`;

exports[`Test Schema properties.expandIcon: AiOutlineArrowRight 1`] = `true`;

exports[`Test Schema properties.expandIcon: AiOutlineArrowRight 2`] = `null`;

exports[`Test Schema properties.expandIconPosition: right 1`] = `true`;

exports[`Test Schema properties.expandIconPosition: right 2`] = `null`;

exports[`Test Schema properties.forceRender: true 1`] = `true`;

exports[`Test Schema properties.forceRender: true 2`] = `null`;

exports[`Test Schema properties.panels 1`] = `true`;

exports[`Test Schema properties.panels 2`] = `null`;

exports[`Test Schema properties.panels.disabled 1`] = `true`;

exports[`Test Schema properties.panels.disabled 2`] = `null`;

exports[`Test Schema properties.panels.extraKey 1`] = `true`;

exports[`Test Schema properties.panels.extraKey 2`] = `null`;

exports[`Test Schema properties.panels.title 1`] = `true`;

exports[`Test Schema properties.panels.title 2`] = `null`;

exports[`Test Schema properties.showArrow: false 1`] = `true`;

exports[`Test Schema properties.showArrow: false 2`] = `null`;

exports[`Test Schema with html in panel title 1`] = `true`;

exports[`Test Schema with html in panel title 2`] = `null`;
